Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis
Peter L Jones
Devin Anderson
Josh Green
Mario Lang
Arnold Krille
Jan Engelhardt
Adrian Knoth
David Garcia Garzon
Valerio Pilo
Chris Caudle
John Emmas

---------------------------
  Jackdmp changes log
---------------------------

2012-01-04 Stephane Letz  <letz@grame.fr>

	* Fix library symbols export issue.

2012-01-02 Stephane Letz  <letz@grame.fr>

	* Adrian Knoth fix in midiseq.c.

2011-12-20 Stephane Letz  <letz@grame.fr>

	* Version 1.9.9 started. 

2011-11-25 Stephane Letz  <letz@grame.fr>

	* More robust dynamic port management in JACK/CoreMidi bridge.
	* Correct jack_port_name_size API.

2011-11-24 Stephane Letz  <letz@grame.fr>

	* Dynamic port management in JACK/CoreMidi bridge.
	* Correct jack_client_create_thread (when realtime in on).

2011-11-21 Stephane Letz  <letz@grame.fr>

	* John Emmas third auto-launch server on Windows patch.

2011-11-07 Stephane Letz  <letz@grame.fr>

	* John Emmas first auto-launch server on Windows patch.
	* John Emmas second auto-launch server on Windows patch.

2011-11-06 Stephane Letz  <letz@grame.fr>

	* Enable local access in NetJack2 code.

2011-11-04 Stephane Letz  <letz@grame.fr>

	* Fix jack_set_port_name API.

2011-11-03 Stephane Letz  <letz@grame.fr>

	* Add missing jack_client_get_uuid API.
	* John Emmas Windows server launching patch (1).

2011-10-28 Stephane Letz  <letz@grame.fr>

	* John Emmas POST_PACKED_STRUCTURE patch.

2011-10-27 Stephane Letz  <letz@grame.fr>

	* Gabriel Beddingfield patch (r4541) reverted.  

2011-10-10 Stephane Letz  <letz@grame.fr>

	* John Emmas patch for DSP CPU computation.

2011-09-27 Stephane Letz  <letz@grame.fr>

	* Gabriel Beddingfield patch for ALSA driver: error when source is non-native byte-order float.

2011-08-31 Stephane Letz  <letz@grame.fr>

	* Correct Start/Stop for Control API.
