@@ -56,7 +56,10 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
     #define MEM_ALIGN(x,y) x
     #define LIB_EXPORT
     #define SERVER_EXPORT
+
     /* Add other things here for non-gcc platforms for PRE and POST_PACKED_STRUCTURE */
+    #define PRE_PACKED_STRUCTURE
+    #define POST_PACKED_STRUCTURE
 #endif
 
 #endif
